implementation of landing- and parser page

--- a/Maui.OldPhone.Keypad/Maui.OldPhone.Keypad.Emulator.Demo/Maui.OldPhone.Keypad.Emulator.Demo.csproj
+++ b/Maui.OldPhone.Keypad/Maui.OldPhone.Keypad.Emulator.Demo/Maui.OldPhone.Keypad.Emulator.Demo.csproj
@@ -49,7 +49,25 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Maui" Version="5.2.0" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Maui.OldPhone.Keypad.Emulator\Maui.OldPhone.Keypad.Emulator.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Controls\OldPhoneInfoCardControl.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\LandingPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\ParserDemoPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
