--- a/Maui.OldPhone.Keypad/Maui.OldPhone.Keypad.Emulator.Demo.Test/Maui.OldPhone.Keypad.Emulator.Demo.Test.csproj
+++ b/Maui.OldPhone.Keypad/Maui.OldPhone.Keypad.Emulator.Demo.Test/Maui.OldPhone.Keypad.Emulator.Demo.Test.csproj
@@ -1,20 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
+	  <UseMaui>true</UseMaui>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="NSubstitute" Version="5.0.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Maui.OldPhone.Keypad.Emulator.Demo\Maui.OldPhone.Keypad.Emulator.Demo.csproj" />
   </ItemGroup>
 
 </Project>
