--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -11,7 +11,7 @@ jobs:
 
     runs-on: windows-latest
     env:
-      working-directory: ./OldPhone.Keypad
+      working-directory: ./Maui.OldPhone.Keypad
     defaults:
       run:
         working-directory: ${{ env.working-directory }}
